# McQueen

./: .env.prod  .gitignore  README.md  pyproject.toml  requirements.txt  t.json  template.html  修改,txt
data/cybersensoji/: config.json  history.json  pictures.json
data/eatwhat/: content.json
data/eatwhat/pictures/: 0  1  10  11  12  13  14  15  16  2  3  4  5  6  7  8  9
data/goodmorning/: config.json
data/guessnumber/: config.json
data/record/: record.json
data/record/pictures/: 101  102  103  105  106  108  109  11  110  111  112  115  116  117  12  14  15  17  18  19  2  20  23  24  27  28  3  30  31  32  33  34  36  38  41  42  43  44  45  46  (+51 more)
data/wifes/: config.json  content.json
data/wifes/pictures/: 0  1  10  100  101  102  103  104  105  106  107  108  109  11  12  13  14  15  16  17  18  19  2  20  21  22  23  24  25  26  27  28  29  31  33  34  35  36  37  38  (+62 more)
src/: utils.py
src/plugins/cybersensoji/: __init__.py  classdef.py  template.html
src/plugins/eatwhat/: __init__.py
src/plugins/echo/: __init__.py  config.py
src/plugins/eitherchoice/: __init__.py  config.py  template.html
src/plugins/globals/: __init__.py  config.py
src/plugins/goodmorning/: __init__.py
src/plugins/guessnumber/: __init__.py
src/plugins/help/: __init__.py  help.html
src/plugins/integral_system/: __init__.py  config.py  user.py  user_manager.py
src/plugins/nonebot_plugin_csgo_case_simulator/: __init__.py
src/plugins/record/: __init__.py  config.py  record.py
src/plugins/repeat/: RecordManager.py  __init__.py  config.py
src/plugins/show_help/: __init__.py  config.py  template.html
src/plugins/test/: config.py
src/plugins/wife/: Wife.py  WifeManager.py  __init__.py  wifeconfig.py
src/plugins/wifes/: __init__.py
