[tool.poetry]
name = "McQueen"
version = "0.1.0"
description = "McQueen"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.3"
nonebot2 = "^2.0.0-beta.1"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.0"

[tool.nonebot]
plugins = ["nonebot_plugin_apscheduler", "nonebot_plugin_htmlrender", "nonebot_plugin_russian_ban", "nonebot_plugin_memes", "nonebot_plugin_wordcloud", "nonebot_plugin_petpet", "nonebot_plugin_repeater", "nonebot_plugin_withdraw", "nonebot_plugin_crazy_thursday", "nonebot_plugin_simplemusic", "nonebot-plugin-person", "nonebot_plugin_cartoon", "nonebot_plugin_status"]
plugin_dirs = ["src/plugins"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
