[project]
name = "McQueen"
version = "0.1.0"
description = "McQueen"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    { name = "Console", module_name = "nonebot.adapters.console" }
]
plugins = ["nonebot_plugin_picstatus", "nonebot_plugin_gocqhttp", "nonebot_plugin_htmlrender", "nonebot_plugin_wordcloud", "nonebot_plugin_apscheduler", "nonebot-plugin-csgo-case-simulator"]
plugin_dirs = ["src/plugins"]
builtin_plugins = ['echo']
